Fixed initializing TZ before installing tzdata

--- a/cuda-conda-dev/Dockerfile
+++ b/cuda-conda-dev/Dockerfile
@@ -16,12 +16,12 @@ RUN bash Miniconda3-py311_25.1.1-2-Linux-x86_64.sh -f -b -p ${CONDA_INSTALL_DIR}
 
 RUN bash -c "source ${CONDA_INSTALL_DIR}/bin/activate && conda init"
 
-RUN apt update && apt install tzdata -y
-
 ENV TZ="America/Los_Angeles"  
 
 RUN ln -fs /usr/share/zoneinfo/America/Los_Angeles /etc/localtime
 RUN apt-get install -y sudo emacs git build-essential libssl-dev
+
+RUN apt-get update && apt-get install tzdata -y
 
 ENV PATH=/root/bin:$PATH
  
@@ -29,7 +29,7 @@ RUN bash -c "conda create -y --name pytorch python=3.11"
 
 SHELL ["conda", "run", "-n", "pytorch", "/bin/bash", "-c"]
 
-RUN pip install --no-input torch torchvision torchaudio jupyter --index-url https://download.pytorch.org/whl/cu126
+RUN pip install --no-input torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu126
 
 SHELL ["/bin/bash", "-c"]
 
